<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="24dp"
        android:paddingEnd="32dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:paddingBottom="12dp"
            android:text="@string/export"
            android:textColor="@color/colorTitle"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/export_btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/close_icon"
            android:tint="@color/colorAccent"
            app:srcCompat="@drawable/ic_close" />

    </LinearLayout>

    <!-- TXT -->
    <LinearLayout
        android:id="@+id/export_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/txt"
            android:tint="@color/colorPrimaryMid"
            android:contentDescription="@string/txt_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginStart="48dp"
            android:textSize="16sp"
            android:textColor="@color/colorTitle"
            android:text="@string/txt"/>

    </LinearLayout>

    <!-- MD -->
    <LinearLayout
        android:id="@+id/export_md"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/md"
            android:tint="@color/colorPrimaryMid"
            android:contentDescription="@string/md_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginStart="48dp"
            android:textSize="16sp"
            android:textColor="@color/colorTitle"
            android:text="@string/markdown" />

    </LinearLayout>

</LinearLayout>