<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="24dp"
    android:paddingBottom="24dp"
    android:paddingStart="40dp"
    android:paddingEnd="40dp">

    <TextView
        android:id="@+id/info_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/information"
        android:textColor="@color/colorTitle"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/info_btn_close"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/info_btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/close_icon"
        android:tint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:srcCompat="@drawable/ic_close" />

    <!-- Date Created -->
    <TextView
        android:id="@+id/info_date_created_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        tools:text="05 May 2020 04:10 PM"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryMid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.0" />
    <TextView
        android:id="@+id/info_date_created_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/date_created"
        android:textSize="16sp"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_date_created_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <!-- Date Modified -->
    <TextView
        android:id="@+id/info_date_modified_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        tools:text="05 May 2020 04:10 PM"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryMid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_date_created_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.0" />
    <TextView
        android:id="@+id/info_date_modified_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/date_modified"
        android:textSize="16sp"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_date_modified_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <!-- Divider -->
    <View
        android:id="@+id/info_divider"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/info_date_modified_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/colorAccent"/>

    <!-- Character Count -->
    <TextView
        android:id="@+id/info_character_count_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        tools:text="2920"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryMid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_divider"
        app:layout_constraintRight_toLeftOf="@+id/info_paragraph_count_label"
        app:layout_constraintVertical_bias="0.0" />
    <TextView
        android:id="@+id/info_character_count_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/character_count"
        android:textSize="16sp"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_character_count_view"
        app:layout_constraintRight_toLeftOf="@+id/info_paragraph_count_label"
        app:layout_constraintVertical_bias="0.0" />

    <!-- Paragraph Count -->
    <TextView
        android:id="@+id/info_paragraph_count_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="26"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryMid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/info_character_count_label"
        app:layout_constraintTop_toTopOf="@+id/info_character_count_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.0" />
    <TextView
        android:id="@+id/info_paragraph_count_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/paragraph_count"
        android:textSize="16sp"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/info_character_count_label"
        app:layout_constraintTop_toTopOf="@+id/info_character_count_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <!-- Word Count -->
    <TextView
        android:id="@+id/info_word_count_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        tools:text="383"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryMid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_character_count_label"
        app:layout_constraintRight_toLeftOf="@+id/info_read_time_label"
        app:layout_constraintVertical_bias="0.0" />
    <TextView
        android:id="@+id/info_word_count_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/word_count"
        android:textSize="16sp"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_word_count_view"
        app:layout_constraintRight_toLeftOf="@+id/info_read_time_label"
        app:layout_constraintVertical_bias="0.0" />

    <!-- Read Time -->
    <TextView
        android:id="@+id/info_read_time_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="1m 54s"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryMid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/info_word_count_label"
        app:layout_constraintTop_toTopOf="@+id/info_word_count_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.0" />
    <TextView
        android:id="@+id/info_read_time_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/read_time"
        android:textSize="16sp"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/info_word_count_label"
        app:layout_constraintTop_toTopOf="@+id/info_word_count_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>